--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A select input component made with Vue JS",
   "author": "Louis Mazel <mazuel.loic@gmail.com>",
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
+    "serve": "vue-cli-service serve --mode development --open",
     "serve:nuxt": "nuxt src",
     "build": "npm run build:lib && npm run build:docs && npm run delete:reports",
     "test": "vue-cli-service test:unit /test/specs",
@@ -58,9 +58,6 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "bugs": {
-    "url": "https://github.com/chronotruck/vue-select-input-ui/issues"
-  },
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
@@ -70,7 +67,10 @@
     "dist/",
     "nuxt/"
   ],
-  "homepage": "https://github.com/chronotruck/vue-select-input-ui/releases",
+  "bugs": {
+    "url": "https://github.com/chronotruck/vue-select-input-ui/issues"
+  },
+  "homepage": "https://github.com/chronotruck/vue-select-input-ui",
   "keywords": [
     "vue",
     "javascript",
