feat(CustomTemplate): Add slots directives to expose options (#4)
* feat(CustomTemplate): Add slots directives

* feat(CustomOptionTemplate): Expose options

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-select-input-ui",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A select input component made with Vue JS",
   "author": "Louis Mazel <mazuel.loic@gmail.com>",
   "scripts": {
@@ -25,24 +25,22 @@
     "delete:reports": "npm run delete-docs-report && npm run delete-dist-report"
   },
   "dependencies": {
-    "css-vars-ponyfill": "^2.1.2",
-    "style-helpers": "^0.2.8",
-    "v-click-outside": "^2.0.2",
+    "color-transformer-ui": "0.0.6",
+    "style-helpers": "^1.0.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-unit-jest": "^4.0.5",
-    "@vue/cli-service": "^4.0.0",
+    "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "color-transformer-ui": "^0.0.3",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "nuxt": "^2.9.2",
     "sass-loader": "^8.0.0",
     "stylelint": "^10.0.1",
@@ -50,7 +48,7 @@
     "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.6.1",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
-    "vue-server-renderer": "^2.6.9",
+    "vue-server-renderer": "^2.6.11",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
